--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap");
 
-html,
-body,
-#root,
-.app {
-  height: 100%;
-  width: 100%;
-  font-family: "Rubik", sans-serif;
+
+.main-container{
+    margin-right: 20vw;
+    margin-left: 20vw;
+    margin-top: 3.8vw;
 }
